force-app/main/default/objects/Deal_Field_Mapping__mdt/Deal_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Deal Field Mapping</label>
    <pluralLabel>Deal Field Mappings</pluralLabel>
</CustomObject>