force-app/main/default/objects/Deal_Field_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <description>When true, this mapping record is included in synchronization logic.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>