force-app/main/default/objects/Deal_Field_Mapping__mdt/fields/Target_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Field_API_Name__c</fullName>
    <label>Target Field API Name</label>
    <description>API name of the target field on Opportunity to write to.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>